Ignore alpha value in extension-specified badge bg color. (Force full opacity.)

BUG=619499

Review-Url: https://codereview.chromium.org/2093973002
Cr-Commit-Position: refs/heads/master@{#402198}

Former-commit-id: b16eadaef85aa0128bf4f74fb96270f0a2479b78